[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dupes"
version = "2025.07.12"
authors = [
  {name="Emil Tylén", email=""}
]
description = "A tool that finds duplicate files in a directory tree"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["cli", "tool", "dupes", "duplicate"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Systems Administrators"
  
]

[project.urls]
Homepage = "https://github.com/acetylen/dupes"
Issues = "https://github.com/acetylen/dupes/issues"

[project.scripts]
dupes = "dupes:main"
